<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/button"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PSActivity"
    tools:visibility="visible">

    <TextView
        android:id="@+id/textView"
        android:layout_width="290dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:text="@string/s_inscrire"
        android:textColor="#070707"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.305"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="257dp"
        android:layout_height="70dp"
        android:background="@android:color/holo_green_dark"
        android:text="@string/enregistrer"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.809" />

    <EditText
        android:id="@+id/Name"
        android:layout_width="367dp"
        android:layout_height="61dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/nom_et_prénom"
        android:inputType="textPersonName"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/Name2"
        android:layout_width="361dp"
        android:layout_height="70dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/mot_de_passe"
        android:inputType="textPersonName"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/Name"
        app:layout_constraintHorizontal_bias="0.892"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Name" />

    <EditText
        android:id="@+id/Name3"
        android:layout_width="357dp"
        android:layout_height="70dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/Name2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/Name2"
        app:layout_constraintTop_toBottomOf="@+id/Name2"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/Phone"
        android:layout_width="360dp"
        android:layout_height="72dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/num_de_téléphone"
        android:inputType="phone"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/Name3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/Name3"
        app:layout_constraintTop_toBottomOf="@+id/Name3" />

    <EditText
        android:id="@+id/adresse"
        android:layout_width="352dp"
        android:layout_height="71dp"
        android:ems="10"
        android:hint="@string/adresse"
        android:inputType="textPersonName"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="@+id/Phone"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="@+id/Phone"
        app:layout_constraintTop_toBottomOf="@+id/Phone"
        app:layout_constraintVertical_bias="0.16" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/Name2"
        app:layout_constraintEnd_toEndOf="@+id/Name2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/Name2" />


</androidx.constraintlayout.widget.ConstraintLayout>